unpackaged/main/default/objects/API_Connector__VAT__c/API_Connector__VAT__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>VAT Validation Service</label>
</CustomObject>