unpackaged/main/default/objects/API_Connector__VAT__c/fields/API_Connector__Custom_VAT_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Custom_VAT_Number_Field__c</fullName>
    <label>Custom VAT Number Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>