unpackaged/main/default/objects/API_Connector__VAT__c/fields/API_Connector__Vat_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Vat_Date__c</fullName>
    <label>Vat Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>