unpackaged/main/default/objects/API_Connector__VAT__c/fields/API_Connector__Vat_Request_Identifier__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Vat_Request_Identifier__c</fullName>
    <description>This field stores the output field mapping request identifier (Step 5. API Connector UI) for VAT Number Service.</description>
    <inlineHelpText>This field stores the output field mapping request identifier (Step 5. API Connector UI) for VAT Number Service.</inlineHelpText>
    <label>Vat Request Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>