unpackaged/main/default/objects/API_Connector__VAT__c/fields/API_Connector__Vat_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Vat_Status__c</fullName>
    <label>Vat Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>